--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/typography": "^0.5.16",
+    "@vercel/analytics": "^1.5.0",
     "@zipph/ai-toolkit": "^0.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
